<resources>
    <string name="app_name">Proiect_Sandu Andrei-Titus</string>
    <string name="initial">Ghid turistic judetul Dambovita</string>
    <string name="attractions_list">Lista atractii</string>
    <string name="photo_gallery">Galerie foto</string>
    <string name="events_list">Lista evenimente</string>
    <string name="settings">Setari</string>
    <string name="feedback">Recenzii</string>
    <string name="back">Inapoi</string>
    <string name="name">Nume</string>
    <string name="email">Email</string>
    <string name="attraction">Atractie</string>
    <string name="rating">Evaluare</string>
    <string name="choose_attraction">Alege atractia turistica</string>
    <string name="choose_rating">Alege Evaluarea (de la 1 la 5 stele)</string>
    <string name="submit">Trimite</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="invalid_name">Numele este invalid. Sunt necesare minim 3 caractere</string>
    <string name="invalid_email">Introduceti un email valid</string>
    <string name="invalid_rating">Evaluarea este de minim o stea</string>
    <string name="navigation_drawer_open">Deschide</string>
    <string name="navigation_drawer_close">Inchide</string>

    <string name="location_services_title">Servicii de locatie</string>
    <string name="location_services_summary">Activeaza servicii pe baza locatiei</string>
    <string name="push_notifications_title">Notificari</string>
    <string name="push_notifications_summary">Activeaza notificari</string>

    <string name="feedback_image">Imagine recenzie</string>
    <string name="hotel_image">Imagine hotel</string>
    <string name="hotels_list">Lista hoteluri</string>
    <string name="location">Locatie</string>

    <string name="cleanliness_label">Curatenie:</string>
    <string name="service_label">Servicii:</string>
    <string name="amenities_label">Dotari:</string>

    <string name="pool_label">Piscina</string>
    <string name="gym_label">Fitness</string>
    <string name="spa_label">Spa</string>

</resources>