<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <ImageView
        android:id="@+id/cell_lv_hotel_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/baseline_hotel_24"
        android:contentDescription="@string/hotel_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cell_lv_hotel_name"/>

    <TextView
        android:id="@+id/cell_lv_hotel_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/cell_lv_hotel_image"
        app:layout_constraintEnd_toStartOf="@id/cell_lv_hotel_location"
        app:layout_constraintBottom_toTopOf="@id/cell_lv_hotel_ratings"/>

    <TextView
        android:id="@+id/cell_lv_hotel_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/location"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/cell_lv_hotel_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cell_lv_hotel_ratings"/>

    <TextView
        android:id="@+id/cell_lv_hotel_ratings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/rating"
        app:layout_constraintTop_toBottomOf="@id/cell_lv_hotel_location"
        app:layout_constraintStart_toEndOf="@id/cell_lv_cleanliness"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/cell_lv_cleanliness"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cleanliness_label"
        app:layout_constraintTop_toBottomOf="@id/cell_lv_hotel_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cell_lv_services"
        />

    <TextView
        android:id="@+id/cell_lv_services"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/service_label"
        app:layout_constraintTop_toBottomOf="@id/cell_lv_cleanliness"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cell_lv_pool"
        />

    <TextView
        android:id="@+id/cell_lv_pool"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pool_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cell_lv_services"
        app:layout_constraintEnd_toStartOf="@id/cell_lv_hotel_ratings"
        app:layout_constraintBottom_toTopOf="@id/cell_lv_gym"
        />

    <TextView
        android:id="@+id/cell_lv_gym"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/gym_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cell_lv_pool"
        app:layout_constraintEnd_toStartOf="@id/cell_lv_hotel_ratings"
        app:layout_constraintBottom_toTopOf="@id/cell_lv_spa"
        />

    <TextView
        android:id="@+id/cell_lv_spa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/spa_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cell_lv_gym"
        app:layout_constraintEnd_toStartOf="@id/cell_lv_hotel_ratings"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>