<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <ImageView
        android:id="@+id/cell_lv_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/baseline_feedback_24"
        android:contentDescription="@string/feedback_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cell_lv_name"/>

    <TextView
        android:id="@+id/cell_lv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/cell_lv_image"
        app:layout_constraintEnd_toStartOf="@id/cell_lv_hotel_location"
        app:layout_constraintBottom_toTopOf="@id/cell_lv_hotel_ratings"/>

    <TextView
        android:id="@+id/cell_lv_hotel_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/email"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/cell_lv_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cell_lv_hotel_ratings"/>

    <TextView
        android:id="@+id/cell_lv_hotel_ratings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/attraction"
        app:layout_constraintTop_toBottomOf="@id/cell_lv_hotel_location"
        app:layout_constraintStart_toEndOf="@id/cell_lv_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cell_lv_rating"/>

    <TextView
        android:id="@+id/cell_lv_rating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/rating"
        app:layout_constraintTop_toBottomOf="@id/cell_lv_hotel_ratings"
        app:layout_constraintStart_toEndOf="@id/cell_lv_image"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>