<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ListView
        android:id="@+id/lv_main_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fab_main_events" />

    <TextView
        android:id="@+id/tv_main_attractions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/attractions_list"
        app:layout_constraintBottom_toTopOf="@id/tv_main_events"
        app:layout_constraintBottom_toBottomOf="@id/fab_main_attractions"
        app:layout_constraintEnd_toStartOf="@id/fab_main_attractions"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_main_description" />

    <TextView
        android:id="@+id/tv_main_events"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/events_list"
        app:layout_constraintBottom_toBottomOf="@id/fab_main_events"
        app:layout_constraintEnd_toStartOf="@id/fab_main_events"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_main_attractions" />

    <TextView
        android:id="@+id/tv_main_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/initial"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_main_attractions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_main_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/events_list"
        android:src="@android:drawable/ic_menu_my_calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fab_main_attractions" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_main_attractions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/attractions_list"
        android:src="@android:drawable/ic_menu_myplaces"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_main_description" />


</androidx.constraintlayout.widget.ConstraintLayout>